--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "YourWardrobeTracker" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "Your Wardrobe Tracker" %></title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag "application", :media => "all" %>
@@ -45,12 +45,19 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">YourWardrobeTracker</a>
+        <a class="navbar-brand" href="#">Your Wardrobe Tracker</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <% if current_user %>
+            <li><%= link_to "Hello, #{current_user.email}!", user_session_path(current_user) %></li>
+            <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+            <li><%= link_to "Capsules", capsules_path  %></li>
+            <li><%= link_to "Wardrobe Items", wardrobe_items_path %></li>
+            <li><%= link_to "Edit your Account", edit_user_registration_path  %></li>
+            <% else %>
+            <li><%= link_to "Sign In", user_session_path  %></li>
+            <li><%= link_to "Sign Up", new_user_registration_path %></li>
+            <% end %>
           </ul>
         </div>
       </div>
@@ -62,23 +69,11 @@
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
-        <div class="col-lg-3">
-          <div class="well sidebar-nav">
-            <h3>Sidebar</h3>
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
+
           </div><!--/.well -->
         </div><!--/span-->
       </div><!--/row-->
-
-      <footer>
-        <p>&copy; Company 2017</p>
-      </footer>
-
+      
     </div> <!-- /container -->
 
   </body>
