--- a/app/views/wardrobe_items/show.html.erb
+++ b/app/views/wardrobe_items/show.html.erb
@@ -1,4 +1,5 @@
 <p id="notice"><%= notice %></p>
+<strong><%= @wardrobe_item.item %>-<%= @wardrobe_item.description %></strong>
 
 <%= link_to 'Edit', edit_wardrobe_item_path(@wardrobe_item) %> |
 <%= link_to 'Back', wardrobe_items_path %>
