--- a/app/views/capsules/index.html.erb
+++ b/app/views/capsules/index.html.erb
@@ -12,6 +12,7 @@
   <tbody>
     <% @capsules.each do |capsule| %>
       <tr>
+        <td><%= capsule.name %></td>
         <td><%= link_to 'Show', capsule %></td>
         <td><%= link_to 'Edit', edit_capsule_path(capsule) %></td>
         <td><%= link_to 'Destroy', capsule, method: :delete, data: { confirm: 'Are you sure?' } %></td>
