--- a/app/views/capsules/show.html.erb
+++ b/app/views/capsules/show.html.erb
@@ -1,4 +1,9 @@
 <p id="notice"><%= notice %></p>
+<strong><%= @capsule.name %></strong>
 
 <%= link_to 'Edit', edit_capsule_path(@capsule) %> |
 <%= link_to 'Back', capsules_path %>
+
+<% @capsule.wardrobe_items.each do |wardrobe_item| %>
+     <%= link_to "#{wardrobe_item.item} - #{wardrobe_item.description}", wardrobe_items_path(:id) %>
+ <% end %>
