--- a/app/views/wardrobe_items/_form.html.erb
+++ b/app/views/wardrobe_items/_form.html.erb
@@ -8,16 +8,14 @@
     <%= f.text_field:description %></div>
 
     <br>
-    <section>
-    <strong>Select a capsule for your wardrobe item:
-      <%= f.collection_select(:capsule_ids, Capsule.all, :id, :name, {prompt: true}) %></strong>
-    </section><br>
+    <strong>Select a capsule for your wardrobe item:</strong><br>
+    <%= f.collection_check_boxes :capsule_ids, Capsule.all, :id, :name %><br><br>
+    <br>
     <strong>Or add a new capsule:</strong>
     <%= f.fields_for :capsules, wardrobe_item.capsules.build do |c| %>
-      <div class="field">
-        <%= c.label :name %>
-        <%= c.text_field:name%>
-      </div>
+    <div class="field"><%= c.label :name %>
+    <%= c.text_field:name%></div>
+
     <% end %>
     <br>
 
