--- a/app/views/wardrobe_items/_form.html.erb
+++ b/app/views/wardrobe_items/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for wardrobe_item do |f| %>
+<%= form_for @wardrobe_item do |f| %>
 <%= f.hidden_field :user_id %>
 
     <div class="field"><%= f.label :item %><br>
