--- a/app/views/capsules/_form.html.erb
+++ b/app/views/capsules/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for ([@wardrobe_item, @capsule]) do |f| %>
+<%= f.hidden_field :user_id, value: current_user.id %>
 <div class="field"><%= f.label :name %><br>
 <%= f.text_field:name %></div>
   <% if capsule.errors.any? %>
