updated views with notice, cleaned up html, updated bundler

--- a/app/views/capsules/index.html.erb
+++ b/app/views/capsules/index.html.erb
@@ -8,7 +8,7 @@
   </thead>
 
   <tbody>
-    <% if @capsules %>
+    <% if @capsules.exists? %>
     <% @capsules.each do |capsule| %>
       <tr>
         <td><%= capsule.name %></td>
@@ -16,10 +16,10 @@
         <td><%= link_to 'Edit', edit_capsule_path(capsule) %></td>
         <td><%= link_to 'Destroy', capsule, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+        <% end %>
+    <% else %>
+     <h4>You have not created any capsules yet.</h4>
     <% end %>
-   <% else %>
-    <h3>You have not created any capsules yet.</h3>
-   <% end %>
   </tbody>
 </table>
 
