--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -18,6 +18,7 @@
         <li><%= link_to "Sign In", user_session_path  %></li>
         <li><%= link_to "Sign Up", new_user_registration_path %></li>
         <li><%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %></li>
+        <li><%= link_to "Forgot your Password?", new_user_password_path %></li>
         <% end %>
       </ul>
     </div>
