--- a/app/views/wardrobe_items/_form.html.erb
+++ b/app/views/wardrobe_items/_form.html.erb
@@ -20,7 +20,7 @@
 
   <% if wardrobe_item.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(wardrobe_item.errors.count, "error") %> prohibited this wardrobe_item from being saved:</h2>
+      <h2><%= pluralize(wardrobe_item.errors.count, "error") %> prohibited this wardrobe item from being saved:</h2>
 
       <ul>
       <% wardrobe_item.errors.full_messages.each do |message| %>
