--- a/app/views/capsules/index.html.erb
+++ b/app/views/capsules/index.html.erb
@@ -15,7 +15,6 @@
         <td><%= link_to 'Show', capsule %></td>
         <td><%= link_to 'Edit', edit_capsule_path(capsule) %></td>
         <td><%= link_to 'Destroy', capsule, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <td><%= link_to 'Stats', stats_path %></td>
       </tr>
         <% end %>
     <% else %>
@@ -26,4 +25,5 @@
 
 <br>
 
-<%= link_to 'New Capsule', new_capsule_path %>
+<%= link_to 'New Capsule', new_capsule_path %> |
+<%= link_to 'Capsules Stats', stats_path %>
