added nested new link to capsules/show and contoller

--- a/app/views/capsules/show.html.erb
+++ b/app/views/capsules/show.html.erb
@@ -5,3 +5,5 @@
 <br><br>
  <%= link_to 'Edit', edit_capsule_path(@capsule) %>
  <%= link_to 'Back', capsules_path %>
+<br><br>
+ <%= link_to 'Add a new Wardrobe Item', new_wardrobe_item_path(@capsule) %>
