--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -13,10 +13,16 @@
         <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
         <li><%= link_to "Capsules", capsules_path  %></li>
         <li><%= link_to "Wardrobe Items", wardrobe_items_path %></li>
-        <li><%= link_to "Edit your Account", edit_user_registration_path  %></li>
-        <% form_tag(capsules_path, :method => "get", id: "search-form") do %>
-          <li><%= text_field_tag :search, params[:search], placeholder: "Capsule Search" %></li>
-        <% end %>
+        <li><%= link_to "Edit your Account", edit_user_registration_path  %></li><br>
+        <%= form_tag(capsules_path, :method => "get", id: "search-form") do %>
+          <%= text_field_tag :search, params[:search], placeholder: "Capsule Search" %>
+          <%= submit_tag "Search", :name => nil%>
+          <% end %>
+          <% if @capsules.present? %>
+            <%= render @capsules %>
+          <% else %>
+            <h4>There are no capsules containing the term(s)<%= params[:search] %>.</h4>
+           <% end %>
         <% else %>
         <li><%= link_to "Sign In", user_session_path  %></li>
         <li><%= link_to "Sign Up", new_user_registration_path %></li>
