--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,13 +37,14 @@
     <![endif]-->
   </head>
   <body>
-    
+
     <%= render 'layouts/nav' %><br>
 
     <div class="container">
       <div class="row">
         <div class="col-lg-9">
           <%= bootstrap_flash %>
+           <div id="app-container"></div>
           <%= yield %>
         </div>
 
