--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,8 +44,9 @@
       <div class="row">
         <div class="col-lg-9">
           <%= bootstrap_flash %>
-           <div id="app-container"></div>
+           <div id="app-container">
           <%= yield %>
+          </div>
         </div>
 
           </div><!--/.well -->
