--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -9,7 +9,7 @@
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
         <% if current_user %>
-        <li><%= link_to "Hello, #{current_user.email}!", user_session_path(current_user) %></li>
+        <li><%= link_to "Hello, #{current_user.email}!", edit_user_registration_path %></li>
         <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
         <li><%= link_to "Capsules", capsules_path  %></li>
         <li><%= link_to "Wardrobe Items", wardrobe_items_path, class: "all_wardrobe_items" %></li>
