Troubleshooting create resource.

--- a/app/views/wardrobe_items/_form.html.erb
+++ b/app/views/wardrobe_items/_form.html.erb
@@ -30,7 +30,7 @@
     </div>
   <% end %>
 
-  <div class="actions">
+  <div class="actions" data-id="<%= wardrobe_item.id %>">
     <%= f.submit %>
   </div>
 <% end %>
